api added for get single product using id
