# swagger/swagger-output.json
@@ -1,17 +1,53 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "APIs",
-    "description": "",
+    "title": "My API",
+    "description": "Description",
     "version": "1.0.0"
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
-    "/api/product/productlist": {
+    "/product/{id}": {
       "get": {
-        "tags": ["Product Apis"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "access-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/productlist": {
+      "get": {
         "description": "",
         "responses": {
           "200": {
@@ -20,9 +56,8 @@
         }
       }
     },
-    "/api/product/create": {
+    "/create": {
       "post": {
-        "tags": ["Product Apis"],
         "description": "",
         "parameters": [
           {
@@ -63,9 +98,8 @@
         }
       }
     },
-    "/api/user/login": {
+    "/login": {
       "post": {
-        "tags": ["User Apis"],
         "description": "",
         "responses": {
           "default": {
@@ -74,9 +108,8 @@
         }
       }
     },
-    "/api/user/userlist": {
+    "/userlist": {
       "get": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -98,9 +131,8 @@
         }
       }
     },
-    "/api/user/user/{id}": {
+    "/user/{id}": {
       "get": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -134,9 +166,8 @@
         }
       }
     },
-    "/api/user/update/{id}": {
+    "/update/{id}": {
       "put": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -194,9 +225,8 @@
         }
       }
     },
-    "/api/user/delete/{id}": {
+    "/delete/{id}": {
       "delete": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -230,9 +260,8 @@
         }
       }
     },
-    "/api/user/sendotp": {
+    "/sendotp": {
       "post": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -251,6 +280,60 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/verifyotp": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "otp": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/forgotpassword": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -258,9 +341,8 @@
         }
       }
     },
-    "/api/user/verifyotp": {
+    "/otpverification": {
       "post": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -289,9 +371,8 @@
         }
       }
     },
-    "/api/user/forgotpassword": {
+    "/updatepassword": {
       "post": {
-        "tags": ["User Apis"],
         "description": "",
         "parameters": [
           {
@@ -300,6 +381,12 @@
             "schema": {
               "type": "object",
               "properties": {
+                "password": {
+                  "example": "any"
+                },
+                "otp": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 }
@@ -313,40 +400,6 @@
           },
           "404": {
             "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/user/otpverification": {
-      "post": {
-        "tags": ["User Apis"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
